samples/_failures_safe/1761343810_8ddeed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b54b632.c: In function ‘main’:
./samples/SAFE/__tmp_4b54b632.c:149:19: error: expected ‘)’ at end of input
  149 |     add_edge(&g, 4
      |             ~     ^
      |                   )
./samples/SAFE/__tmp_4b54b632.c:149:5: error: too few arguments to function ‘add_edge’
  149 |     add_edge(&g, 4
      |     ^~~~~~~~
./samples/SAFE/__tmp_4b54b632.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_4b54b632.c:149:5: error: expected declaration or statement at end of input
  149 |     add_edge(&g, 4
      |     ^~~~~~~~
